--- a/style_about.css
+++ b/style_about.css
@@ -82,7 +82,7 @@ header
     height: 350px;
     width: 500px;
     border-color:rgb(32, 46, 238);
-    border-style: solid;
+    border-style: double;
     border-width: 10px;
     border-radius: 50px;
     overflow: hidden;
@@ -97,7 +97,7 @@ header
     color: whitesmoke;
     width: 500px;
     margin-top: 100px;
-    margin-left: 200px;
+    margin-left: 150px;
 }
 
 #Introduction
@@ -107,11 +107,9 @@ header
    text-shadow: 2px 2px 7px rgb(21, 17, 248);
    color: whitesmoke;
    width: 500px;
-   margin-left: 200px;
+   margin-left: 150px;
    line-height: 35px;
 }
-
-
 
 .fa-solid.fa-house
 {
