--- a/style_about.css
+++ b/style_about.css
@@ -79,12 +79,12 @@ header
     float: right;
     margin-top: 80px;
     margin-right: 100px;
-    height: 350px;
+    height: 500px;
     width: 500px;
     border-color:rgb(32, 46, 238);
     border-style: double;
     border-width: 10px;
-    border-radius: 50px;
+    border-radius: 50%;
     overflow: hidden;
     object-fit: cover;
 }
