--- a/style_about.css
+++ b/style_about.css
@@ -16,6 +16,18 @@
     font-family: Roboto;
 }
 
+@font-face
+{
+    src: url(fonts/Roboto-Light.ttf);
+    font-family: RobotoLight;
+}
+
+@font-face
+{
+    src: url(fonts/Roboto-Bold.ttf);
+    font-family: RobotoBold;
+}
+
 body
 {
     background-image: url(images/aboutbackground.jpg);
@@ -29,10 +41,10 @@ header
     text-align: center;
     color: white;
     text-shadow: 3px 3px 5px rgb(0, 251, 255);
-    border-style: double;
     font-family: Anta, Arial;
     font-size: 25px;
     background-color: darkblue;
+    border-style: double;
     border-color: black;
     border-width: 10px;
     border-radius: 20px;
@@ -51,6 +63,10 @@ header
     width: 262px;
     margin-left: auto;
     margin-right: auto;
+    border-style: solid;
+    border-color: black;
+    border-width: 3px;
+    border-top: none;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
 }
@@ -98,17 +114,51 @@ header
     width: 500px;
     margin-top: 100px;
     margin-left: 150px;
+    user-select: none;
 }
 
 #Introduction
 {
-   font-family: Roboto;
-   font-size: 25px;
-   text-shadow: 2px 2px 7px rgb(21, 17, 248);
-   color: whitesmoke;
-   width: 500px;
-   margin-left: 150px;
-   line-height: 35px;
+    font-family: Roboto;
+    font-size: 25px;
+    text-shadow: 2px 2px 7px rgb(21, 17, 248);
+    color: whitesmoke;
+    width: 500px;
+    margin-left: 150px;
+    line-height: 35px;
+}
+
+#HobbiesTitle
+{
+    font-family: RobotoLight;
+    font-size: 40px;
+    text-shadow: 2px 2px 7px rgb(21, 17, 248);
+    color: whitesmoke;
+    text-align: center;
+    margin-top: 250px;
+    line-height: 35px;
+}
+
+#Hobbies
+{
+    font-family: RobotoBold;
+    font-size: 50px;
+    text-shadow: 2px 2px 10px rgb(21, 17, 248);
+    color: whitesmoke;
+    margin-top: 50px;
+    margin-left: 0px;
+    text-align: center;
+    user-select: none;
+}
+
+#HobbiesImages
+{
+    width: 600px;
+    height: 450px;
+    border-style: dashed;
+    border-radius: 20px;
+    border-width: 7px;
+    border-color: rgb(169, 169, 235);
 }
 
 .fa-solid.fa-house
