--- a/style_about.css
+++ b/style_about.css
@@ -28,6 +28,11 @@
     font-family: RobotoBold;
 }
 
+::-webkit-scrollbar
+{
+    display: none;
+}
+
 body
 {
     background-image: url(images/aboutbackground.jpg);
